Issue #145 : Jawr 3.2.1 not compatible with Java 1.4
git-svn-id: https://svn.java.net/svn/jawr~svn/branches/3.x_development@577 4db09855-0bbe-6bc9-8408-d5225a1fabd9